--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <!-- Logo -->
           <a href="/" class="logo">
             <img src="./img/logo.jpg" alt="logo" />
-            <span class="logo__text"> bran<span class="pink bold">d</span></span>
+            <span class="logo__text">
+              bran<span class="pink bold">d</span></span
+            >
           </a>
 
           <div class="header__block">
@@ -28,7 +30,11 @@
                 Browse<span class="fa fa-caret-down gray arrow"></span>
               </button>
               <!-- Search input -->
-              <input class="header__input" type="text" placeholder="Search for Item..." />
+              <input
+                class="header__input"
+                type="text"
+                placeholder="Search for Item..."
+              />
               <!-- Search button -->
               <button class="form__btn search">
                 <span class="fa fa-search"></span>
@@ -50,24 +56,63 @@
         </div>
       </div>
 
+      <hr />
+
       <!-- Bottom -->
-      <div class="header__bottom">
+      <div class="header__bottom container">
         <nav class="nav">
           <ol class="nav__list">
-            <li><button class="nav__btn">home</button></li>
-            <li><button class="nav__btn">man</button></li>
-            <li><button class="nav__btn">women</button></li>
-            <li><button class="nav__btn">kids</button></li>
-            <li><button class="nav__btn">accoseriese</button></li>
-            <li><button class="nav__btn">featured</button></li>
-            <li><button class="nav__btn">hot deals</button></li>
+            <li><a class="nav__link">home</a></li>
+            <li><a class="nav__link">man</a></li>
+            <li><a class="nav__link">women</a></li>
+            <li><a class="nav__link">kids</a></li>
+            <li><a class="nav__link">accoseriese</a></li>
+            <li><a class="nav__link">featured</a></li>
+            <li><a class="nav__link">hot deals</a></li>
           </ol>
         </nav>
       </div>
     </header>
 
     <main>
-      <div class="container"></div>
+      <div class="bg">
+        <div class="brand container">
+          <div class="brand__block">
+            <span class="brand__primary brand__text">THE BRAND</span
+            ><span class="brand__text"
+              >OF LUXERIOUS <span class="pink"> FASHION</span></span
+            >
+          </div>
+        </div>
+      </div>
+
+      <section class="hot container">
+        <div class="hot__img1 hot__img">
+          <img src="/img/hot1.jpg" alt="hot" />
+          <div class="hot__mark">
+            <span>hOT dEAL</span> <span class="pink">FOR MEN</span>
+          </div>
+        </div>
+        <div class="hot__img2 hot__img">
+          <img src="/img/hot2.jpg" alt="hot" />
+          <div class="hot__mark">
+            <span>30% offer</span> <span class="pink">women</span>
+          </div>
+        </div>
+        <div class="hot__img3 hot__img">
+          <img src="/img/hot3.jpg" alt="hot" />
+          <div class="hot__mark">
+            <span>LUXIROUS & trendy</span>
+            <span class="pink">ACCESORIES</span>
+          </div>
+        </div>
+        <div class="hot__img4 hot__img">
+          <img src="/img/hot4.jpg" alt="hot" />
+          <div class="hot__mark">
+            <span>new arrivals</span> <span class="pink">FOR kids</span>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
