--- a/index.html
+++ b/index.html
@@ -113,6 +113,82 @@
           </div>
         </div>
       </section>
+
+      <section class="featured container">
+        <h2 class="featured__h2">Fetured Items</h2>
+        <p class="featured__p">
+          Shop for items based on what we featured in this week
+        </p>
+        <div class="featured__flex">
+          <article class="featured__card">
+            <img src="/img/card1.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card2.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card3.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card4.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card5.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card6.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card7.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+          <article class="featured__card">
+            <img src="/img/card8.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
+        </div>
+        <button class="featured__browse">
+          Browse All Product <span class="fa fa-long-arrow-right"></span>
+        </button>
+      </section>
+
+      <div class="sale container">
+        <div class="sale__art-block">
+          <img class="sale__img" src="/img/winter.jpg" alt="winter-sale" />
+          <div class="sale__offer">30% OFFER FOR WOMEN</div>
+        </div>
+        <div class="sale__advantages">
+          <sale__item
+            ><h3></h3>
+            Worldwide delivery on all. Authorit tively morph next-generation
+            innov tion with extensive models.
+          </sale__item>
+          <sale__item
+            ><h3></h3>
+            Worldwide delivery on all. Authorit tively morph next-generation
+            innov tion with extensive models.
+          </sale__item>
+          <sale__item
+            ><h3></h3>
+            Worldwide delivery on all. Authorit tively morph next-generation
+            innov tion with extensive models.
+          </sale__item>
+        </div>
+      </div>
     </main>
 
     <footer>
