--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
           <!-- Logo -->
           <a href="/" class="logo">
             <img src="./img/logo.jpg" alt="logo" />
-            <span class="logo__text">
-              bran<span class="pink bold">d</span></span
-            >
+            <span class="logo__text"> bran<span class="pink bold">d</span></span>
           </a>
 
           <div class="header__block">
@@ -30,11 +28,7 @@
                 Browse<span class="fa fa-caret-down gray arrow"></span>
               </button>
               <!-- Search input -->
-              <input
-                class="header__input"
-                type="text"
-                placeholder="Search for Item..."
-              />
+              <input class="header__input" type="text" placeholder="Search for Item..." />
               <!-- Search button -->
               <button class="form__btn search">
                 <span class="fa fa-search"></span>
@@ -79,9 +73,7 @@
         <div class="brand container">
           <div class="brand__block">
             <span class="brand__primary brand__text">THE BRAND</span
-            ><span class="brand__text"
-              >OF LUXERIOUS <span class="pink"> FASHION</span></span
-            >
+            ><span class="brand__text">OF LUXERIOUS <span class="pink"> FASHION</span></span>
           </div>
         </div>
       </div>
@@ -89,15 +81,11 @@
       <section class="hot container">
         <div class="hot__img1 hot__img">
           <img src="/img/hot1.jpg" alt="hot" />
-          <div class="hot__mark">
-            <span>hOT dEAL</span> <span class="pink">FOR MEN</span>
-          </div>
+          <div class="hot__mark"><span>hOT dEAL</span> <span class="pink">FOR MEN</span></div>
         </div>
         <div class="hot__img2 hot__img">
           <img src="/img/hot2.jpg" alt="hot" />
-          <div class="hot__mark">
-            <span>30% offer</span> <span class="pink">women</span>
-          </div>
+          <div class="hot__mark"><span>30% offer</span> <span class="pink">women</span></div>
         </div>
         <div class="hot__img3 hot__img">
           <img src="/img/hot3.jpg" alt="hot" />
@@ -108,17 +96,13 @@
         </div>
         <div class="hot__img4 hot__img">
           <img src="/img/hot4.jpg" alt="hot" />
-          <div class="hot__mark">
-            <span>new arrivals</span> <span class="pink">FOR kids</span>
-          </div>
+          <div class="hot__mark"><span>new arrivals</span> <span class="pink">FOR kids</span></div>
         </div>
       </section>
 
       <section class="featured container">
         <h2 class="featured__h2">Fetured Items</h2>
-        <p class="featured__p">
-          Shop for items based on what we featured in this week
-        </p>
+        <p class="featured__p">Shop for items based on what we featured in this week</p>
         <div class="featured__flex">
           <article class="featured__card">
             <img src="/img/card1.jpg" alt="card" class="featured__img" />
@@ -169,26 +153,34 @@
       <div class="sale container">
         <div class="sale__art-block">
           <img class="sale__img" src="/img/winter.jpg" alt="winter-sale" />
-          <div class="sale__offer">30% OFFER FOR WOMEN</div>
+          <div class="sale__offer">
+            <span class="sale__primary">30% <span class="pink">OFFER</span> </span
+            ><span class="sale__second">FOR WOMEN</span>
+          </div>
         </div>
         <div class="sale__advantages">
-          <sale__item
-            ><h3></h3>
-            Worldwide delivery on all. Authorit tively morph next-generation
-            innov tion with extensive models.
-          </sale__item>
-          <sale__item
-            ><h3></h3>
-            Worldwide delivery on all. Authorit tively morph next-generation
-            innov tion with extensive models.
-          </sale__item>
-          <sale__item
-            ><h3></h3>
-            Worldwide delivery on all. Authorit tively morph next-generation
-            innov tion with extensive models.
-          </sale__item>
+          <img class="sale__icon" src="/img/delivery.png" alt="delivery" srcset="" />
+          <h3 class="sale__h3">Free Delivery</h3>
+          <p class="sale__p">
+            Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+            extensive models.
+          </p>
+          <img class="sale__icon" src="/img/sale.png" alt="sale" srcset="" />
+          <h3 class="sale__h3">Sales & discounts</h3>
+          <p class="sale__p">
+            Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+            extensive models.
+          </p>
+          <img class="sale__icon" src="/img/quality.png" alt="quality" srcset="" />
+          <h3 class="sale__h3">Quality assurance</h3>
+          <p class="sale__p">
+            Worldwide delivery on all. Authorit tively morph next-generation innov tion with
+            extensive models.
+          </p>
         </div>
       </div>
+
+      <div class="subscribe"></div>
     </main>
 
     <footer>
