--- a/index.html
+++ b/index.html
@@ -180,7 +180,39 @@
         </div>
       </div>
 
-      <div class="subscribe"></div>
+      <div class="subscribe">
+        <div class="subscribe__bg"></div>
+
+        <div class="subscribe__flex container">
+          <div>
+            <figure class="subscribe__figure">
+              <img class="subscribe__avatar" src="/img/avatar.png" alt="avatar" />
+              <div class="subscribe__text">
+                <p class="subscribe__citate">
+                  “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+                  condimentum a. Aliquam condimentum mattis neque sed pretium”
+                </p>
+                <caption>
+                  <span class="subscribe__primary">Bin Burhan</span>
+                  <span class="subscribe__second">Dhaka, Bd</span>
+                </caption>
+              </div>
+            </figure>
+            <div class="subscribe__slider">
+              <button class="subscribe__btn"></button>
+              <button class="subscribe__btn btn__active"></button
+              ><button class="subscribe__btn"></button>
+            </div>
+          </div>
+          <form action="" class="subscribe__form">
+            <fieldset>
+              <legend>Subscribe FOR OUR NEWLETTER AND PROMOTION</legend>
+              <input type="email" placeholder="Enter Your Email" />
+              <input type="button" value="Subscribe" />
+            </fieldset>
+          </form>
+        </div>
+      </div>
     </main>
 
     <footer>
