--- a/index.html
+++ b/index.html
@@ -459,42 +459,66 @@
         </p>
         <div class="featured__flex">
           <article class="featured__card">
-            <img src="/img/card1.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card1.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card2.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card2.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card3.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card3.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card4.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card4.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card5.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card5.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card6.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card6.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card7.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card7.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
-            <img src="/img/card8.jpg" alt="card" class="featured__img" />
+            <button class="featured__add">
+              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="/img/card8.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
